--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ h3.projectSubtitle {
 	font-weight: 100;
 	margin-top: 0.5em;
 	margin-bottom: 1.5em;
+	color: #414141;
 }
 
 h3.project-title {
@@ -68,12 +69,14 @@ h3.project-title {
 	font-size: 2.25em;
 	font-weight: 400;
 	margin-bottom: 0.75em;
+	color: #414141;
 }
 
 h3.proj-subtitle {
 	font-family: "Open Sans", sans-serif;
 	font-size: 1.5em;
 	font-weight: 400;
+	color: #414141;
 }
 
 h4.subtitle {
@@ -81,7 +84,7 @@ h4.subtitle {
 	font-weight: 100;
 	font-size: 1em;
 	color: #9A9A9A;
-	 margin-top: 0;
+	margin-top: 0;
     margin-bottom: 3.2em;
 }
 
@@ -279,6 +282,29 @@ img {
     max-width: 100%;
 }
 
+img.side {
+	max-width: 415px;
+    max-height: 300px;
+    margin-left: 0;
+    margin-right: 40px;
+    margin-bottom: 15px;
+}
+
+img.projectMock {
+	max-width: 850px;
+	overflow: auto;
+	height: auto;
+	margin-top: 1.3em;
+}
+
+img.projectMockWhite {
+	max-width: 850px;
+	overflow: auto;
+	height: auto;
+	margin-top: 1.3em;
+	border: 1px solid #d8d8d8;
+}
+
 
 /* Divs */
 
@@ -318,13 +344,6 @@ img {
 .projectDesc {
 	width: 50%;
 	position: relative;
-}
-
-.projectMock {
-	max-width: 850px;
-	overflow: auto;
-	height: auto;
-	margin-top: 1.3em;
 }
 
 .portfolioDesc {
