--- a/main.css
+++ b/main.css
@@ -79,6 +79,15 @@ h3.proj-subtitle {
 	color: #414141;
 }
 
+h3.work-title {
+	font-family: "Rubik", sans-serif;
+	font-weight: 400;
+	color: #414141;
+	font-size: 1.25em;
+	margin-bottom: 0.3em;
+	margin-top: 0.7em;
+}
+
 h4.subtitle {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 100;
@@ -103,6 +112,16 @@ h4.projectDate {
     color: #9A9A9A;
     margin-top: 0.5em;
     margin-bottom: 2em;
+}
+
+h4.projectType {
+	font-family: "Rubik", sans-serif;
+    font-size: 0.9em;
+    font-weight: 100;
+    color: #9A9A9A;
+    margin-top: 0.5em;
+    margin-bottom: 2em;
+    max-width: 250px;
 }
 
 
@@ -183,6 +202,7 @@ p.work-description {
     font-weight: 100;
     margin-top: 10px;
     margin-bottom: 4em;
+    max-width: 60%;
 }
 
 /* Links */
@@ -236,6 +256,11 @@ a.projectPic {
 		opacity: 0.6;
 	}
 
+a.projectPicContainer {
+	max-width: 100%;
+	height: 250px;
+}
+
 a.person {
 	font-family: 'Open Sans', sans-serif;
 	color: #5DC3C9;
@@ -282,6 +307,13 @@ img {
     max-width: 100%;
 }
 
+img.box {
+	height: 250px;
+	width: 250px;
+	object-fit: contain;
+	overflow: hidden;
+}
+
 img.side {
 	max-width: 415px;
     max-height: 300px;
@@ -305,8 +337,18 @@ img.projectMockWhite {
 	border: 1px solid #d8d8d8;
 }
 
+img.fullwidth {
+    max-width: 100%;
+    height: 400px;
+    width: 100%;
+}
 
 /* Divs */
+
+.threecolumn {
+	display: flex;
+	justify-content: space-between;
+}
 
 .container {
 	max-width: 850px;
@@ -317,12 +359,24 @@ img.projectMockWhite {
 	margin: auto;
 }
 
+.GDbox {
+	max-width: 283px;
+}
+
 .hero {
 	max-width: 400px
 }
 
 .image2 {
 	display: flex;
+}
+
+.imageContainerMW {
+	height: 325px;
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+	margin-bottom: 2.75em;
 }
 
 .imageLeft {
