--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ h3.project-title {
 
 h3.proj-subtitle {
 	font-family: "Open Sans", sans-serif;
-	font-size: 28px;
+	font-size: 24px;
 	font-weight: 400;
 	color: #414141;
 }
@@ -318,7 +318,6 @@ img {
 	display: inline;
     margin: 0 auto;
     height: 100%;
-    width: auto;
     width: 100%;
 }
 
@@ -488,8 +487,7 @@ img.fullwidth {
 		width: 100%;
 	}
 	.metaRight {
-		widows: 100%;
-	}
+		widows: 100%;}
 	nav {
 		display: block;
 	    width: 100%;
@@ -538,6 +536,9 @@ img.fullwidth {
 		max-width: 850px;
 		overflow: auto;
 		height: auto;
+	}
+	.image2 {
+		display: block;
 	}
 }
 
@@ -602,5 +603,8 @@ img.fullwidth {
 		max-width: 850px;
 		overflow: auto;
 		height: auto;
+	}
+	.image2 {
+		display: block;
 	}
 }
