--- a/main.css
+++ b/main.css
@@ -66,6 +66,19 @@ h3.about {
 	font-weight: 500;
 }
 
+h3.GDsubtitle {
+	font-family: "Rubik", sans-serif;
+	font-weight: 400;
+	color: #414141;
+	font-size: 28px;
+    margin-top: 0.5em;
+    margin-bottom: 0;
+    width: 50%;
+    text-align: center;
+    margin: auto;
+    padding-bottom: 0.7em
+}
+
 h3.projectSubtitle {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 19px;
@@ -271,6 +284,17 @@ a {
 	font-size: 15px;
 }
 
+a.anchor {
+	font-family: "Open Sans", sans-serif;
+	font-size: 16px;
+    font-weight: 100;
+    color: #a2d5d8;
+}
+
+	a.anchor:hover {
+		color: #c1e6e8;
+	}
+
 a.navLink {
 	font-weight: 100;
 	color: #9A9A9A;
@@ -289,9 +313,9 @@ a.navName {
 	font-size: 16px;
 }
 
-a.navName:hover{
-	color: #5DC3C9;
-}
+	a.navName:hover{
+		color: #5DC3C9;
+	}
 
 a.viewWork {
 	font-family: 'Open Sans', sans-serif;
