completed wc moving page

--- a/main.css
+++ b/main.css
@@ -521,6 +521,11 @@ img.disabledBox {
     margin-top: 4em;
 }
 
+.GDpage2 {
+    margin-top: 4em;
+    margin-bottom: 3em;
+}
+
 .GDinfo {
 	display: block;
 }
