--- a/main.css
+++ b/main.css
@@ -29,6 +29,16 @@ h1.projectTitle {
 	margin-top: 2.5em;
 }
 
+h1.photoTitle {
+    font-family: "Rubik", sans-serif;
+    font-size: 40px;
+    color: #4F4F4F;
+    font-weight: 400;
+    margin-top: 3em;
+    margin-bottom: 0.3em;
+    text-align: center;
+}
+
 h2.homeTitle {
 	font-family: "Rubik", sans-serif;
 	color: #414141;
@@ -275,6 +285,15 @@ p.work-description {
     font-size: 16px;
 }
 
+p.photo-desc {
+    color: #414141;
+    font-weight: 100;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 7em;
+}
+
 /* Links */
 
 a {
@@ -338,6 +357,7 @@ a.projectPic {
 }
 	.projectPic:hover {
 		opacity: 0.6;
+		transition: .5s ease;
 	}
 
 a.projectPicBox {
@@ -348,6 +368,7 @@ a.projectPicBox {
 }
 	.projectPicBox:hover {
 		opacity: 0.6;
+		transition: .5s ease;
 	}
 
 a.projectPicContainer {
@@ -355,7 +376,19 @@ a.projectPicContainer {
 	height: 250px;
 }
 	a.projectPicContainer:hover {
+		opacity: 0.6;
+		transition: .5s ease;
+	}
+
+
+a.photoPicContainer {
+	width: 100%;
+	height: 250px;
+}
+
+	a.photoPicContainer:hover {
 		opacity: 0.8;
+  		transition: .5s ease;
 	}
 
 a.person {
@@ -431,7 +464,7 @@ a.arrownav {
 }
 
 .projnavright {
-	 text-align: right;
+	text-align: right;
 	width: 50%;
 }
 
@@ -471,6 +504,8 @@ img.fullwidth {
     max-width: 100%;
     height: auto;
     overflow: hidden;
+    visibility: visible;
+    opacity: 1;
 }
 
 img.disabledBox {
@@ -481,6 +516,7 @@ img.disabledBox {
 }
 	img.disabledBox:hover {
 		opacity: 0.6;
+		transition: .5s ease;
 	}
 
 /* Divs */
@@ -493,6 +529,21 @@ img.disabledBox {
 	height: auto;
 	width: auto;
 	overflow: hidden;
+}
+
+.column {
+	float: left;
+	width: 33%;
+}
+
+.column img {
+    width: 100%;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .container {
@@ -546,6 +597,51 @@ img.disabledBox {
 	margin-bottom: 2.25em;
 }
 
+.photocontainer {
+	height: 375px;
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+}
+
+	.photocontainer .hovertext {
+		position:relative;
+		bottom: 275px;
+		visibility:hidden;
+	}
+
+	.photocontainer .hoversubtext {
+		position:relative;
+		bottom: 305px;
+		visibility:hidden;
+		margin: auto;
+	}
+
+	.photocontainer:hover .hovertext {
+		visibility:visible;
+	}
+
+	.photocontainer:hover .hoversubtext {
+		visibility:visible;
+	}
+
+	.hovertext {
+		font-family: 'Rubik', sans-serif;
+		font-weight: 100;
+		font-size: 36px;
+    	text-align: center;
+    	color: #fff;
+	}
+
+	.hoversubtext {
+		font-family: 'Rubik', sans-serif;
+		font-weight: 100;
+		font-size: 18px;
+		width: 45%;
+    	text-align: center;
+    	color: #fff;
+	}
+
 .imageLeft {
 	display: flex;	
 }
@@ -562,15 +658,17 @@ img.disabledBox {
 	text-align: left;
 }
 
+.photogrid {
+
+}
+
 .projectDesc {
 	width: 50%;
 	position: relative;
 }
 
 .portfolioDesc {
-	/*width: 100%;*/
 	margin-top: 2.8em;
-	/*position: absolute;*/
 }
 
 .overview {
