--- a/main.css
+++ b/main.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 /* Type */
 
 h1.heroHead {
@@ -331,6 +328,17 @@ a.anchor {
 		color: #c1e6e8;
 	}
 
+a.footer {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: 100;
+	color: #5DC3C9;
+}
+
+	a.footer:hover {
+		opacity: 0.6;
+	}
+
 a.navLink {
 	font-weight: 100;
 	color: #9A9A9A;
@@ -541,6 +549,21 @@ a.arrownav {
     -webkit-transform: rotate(-135deg);
 }
 
+/*footer*/
+
+.footer {
+	position: absolute;
+  	text-align: left;
+  	margin-top: 3em;
+   	margin-bottom: 4.5em;
+}
+
+.footer-row {
+	margin: 0.5em 0;
+  	float: left;
+  	clear: both;
+}
+
 /* Img */
 
 img {
@@ -696,6 +719,29 @@ img.disabledBox {
 .homecontainer {
 	width: 48%;
 }
+	
+	.homecontainer .hovertexthome {
+		position:relative;
+		bottom: 275px;
+		visibility:hidden;
+	}
+
+	.homecontainer .hoversubtexthome {
+		position:relative;
+		bottom: 305px;
+		visibility:hidden;
+		margin: auto;
+	}
+
+	.homecontainer:hover .hovertexthome {
+		visibility:visible;
+		transition: 0.6s ease;
+	}
+
+	.homecontainer:hover .hoversubtexthome {
+		visibility:visible;
+		transition: 0.6s ease;
+	}
 
 .homebox {
 	width: 30.5%;
@@ -748,7 +794,7 @@ img.disabledBox {
 	.hovertext {
 		font-family: 'Rubik', sans-serif;
 		font-weight: 100;
-		font-size: 36px;
+		font-size: 2.35em;
     	color: #fff;
     	display: inline-block;
 	}
@@ -756,7 +802,7 @@ img.disabledBox {
 	.hoversubtext {
 		font-family: 'Rubik', sans-serif;
 		font-weight: 100;
-		font-size: 18px;
+		font-size: 1.1em;
 		width: 45%;
     	color: #fff;
 	}
