--- a/main.css
+++ b/main.css
@@ -554,14 +554,25 @@ a.arrownav {
 .footer {
 	position: absolute;
   	text-align: left;
-  	margin-top: 3em;
-   	margin-bottom: 4.5em;
+  	margin-top: 8em;
+   	margin-bottom: 5em;
+   	max-width: 50%;
 }
 
 .footer-row {
 	margin: 0.5em 0;
   	float: left;
   	clear: both;
+}
+
+.footericon {
+    width: 25px;
+    margin-right: 1.35em;
+}
+
+.footerlink:hover {
+	opacity: 0.35;
+	transition: 0.6s ease;
 }
 
 /* Img */
