--- a/main.css
+++ b/main.css
@@ -478,6 +478,7 @@ button.resume {
     font-size: 16px;
     font-weight: 100;
     margin-top: 2.5em;
+    cursor: pointer;
 }
 
 	button.resume:hover {
