--- a/main.css
+++ b/main.css
@@ -228,9 +228,10 @@ p.homeBody {
 }
 
 p.heroBody {
-	font-size: 1em;
-	font-weight: 100;
-	color: #9A9A9A;
+	font-size: 1.2em;
+    font-weight: 100;
+    color: #9A9A9A;
+    margin-top: 0;
 }
 
 p.infoA {
