--- a/main.css
+++ b/main.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i');
+
 /* Type */
 
 h1.heroHead {
-	font-family: "Rubik", sans-serif;
-	font-size: 3.75em;
-	font-weight: 400;
-	color: #414141;
+    font-family: "Rubik", sans-serif;
+    font-size: 3.75em;
+    font-weight: 400;
+    color: #ffffff;
     margin-bottom: 0;
 }
 
@@ -49,9 +52,9 @@ h2.homeTitle {
     font-family: "Rubik", sans-serif;
     color: #414141;
     font-weight: 400;
-    font-size: 26px;
-    margin-bottom: 0.7em;
-    margin-top: 0;
+    font-size: 24px;
+    margin-bottom: 1em;
+    margin-top: 4em;
 }
 
 h2.projectTitle {
@@ -230,7 +233,7 @@ p.homeBody {
 p.heroBody {
 	font-size: 1.2em;
     font-weight: 100;
-    color: #9A9A9A;
+    color: #ffffff;
     margin-top: 0;
 }
 
@@ -761,8 +764,18 @@ img.disabledBox {
 
 .hero {
 	max-width: 400px;
-    margin-bottom: 18em;
-    margin-top: 8em;
+    margin-top: -12em;
+    position: relative;
+}
+
+.herocover {
+	position: absolute;
+	left: 0;
+    top: 6.25em;
+}
+
+.herocontainer {
+	margin-bottom: 45em
 }
 
 .homecontainer {
@@ -912,7 +925,25 @@ img.disabledBox {
 
 /*Responsive*/
 
-@media (min-width: 1025px) and (max-width: 1440px){
+@media (min-width: 2250px) and (max-width: 2560px) {
+	.herocontainer {
+		margin-bottom: 66em;
+	}
+}
+
+@media (min-width: 1441px) and (max-width: 1640px) {
+	.herocontainer {
+		margin-bottom: 45em;
+	}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+	.herocontainer {
+		margin-bottom: 35em;
+	}
+}
+
+@media (min-width: 1025px) and (max-width: 1440px) {
 	.container {
     	padding: 30px 125px;
 	}
@@ -923,6 +954,9 @@ img.disabledBox {
 	}
 	.navRight {
 		width: 100%;
+	}
+	.herocontainer {
+		margin-bottom: 40em;
 	}
 }
 
@@ -935,6 +969,9 @@ img.disabledBox {
 	}
 	.navRight {
 		width: 100%;
+	}
+	.herocontainer {
+		margin-bottom: 30em;
 	}
 }
 
