--- a/portfolio_v2/main.css
+++ b/portfolio_v2/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i');
+@import url('https://fonts.googleapis.com/css?family=Bitter:400,400i');
 
 /* Variables */
 
@@ -9,15 +10,15 @@ $blue: #5B95EB;*/
 
 /* Type */
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
 	font-family: 'Lato', sans-serif;
+	color: #424242;
 }
 
 h1.hero-title {
 	font-weight: 900;
     font-size: 2.75em;
     margin-bottom: 0;
-	color: #424242;
 }
 
 h3.hero-subtitle {
@@ -29,7 +30,6 @@ h3.hero-subtitle {
 }
 
 h3.work-title {
-	color: #424242;
 	font-size: 1.3em;
 	margin-bottom: 0;
 	margin-top: 0.8em;
@@ -45,12 +45,20 @@ h4.project-type {
     margin-bottom: 0em;
 }
 
+h4.section-title {
+	font-weight: 900;
+    font-size: 1.8em;
+    margin-top: 2.7em;
+    margin-bottom: 0.6em;
+}
+
 p {
 	font-family: "Nunito", sans-serif;
 	font-size: 0.95em;
 	font-weight: 100;
 	line-height: 1.8em;
 	color: #424242;
+	margin-bottom: 1.8em;
 }
 
 p.hero-para {
@@ -63,6 +71,30 @@ p.footer-text {
 
 p.project-info {
 	font-size: 0.92em;
+}
+
+p.proj-tags {
+	color: #BDBDBD;
+	font-size: 0.92em;
+	margin-top: 0;
+    margin-bottom: 3.5em;
+}
+
+p.quote {
+    font-family: 'Bitter', serif;
+    font-weight: 100;
+    font-size: 1.25em;
+    font-style: italic;
+    margin: 0 0 2em 0;
+}
+
+ul {
+	font-family: "Nunito", sans-serif;
+	font-size: 0.95em;
+	font-weight: 100;
+	line-height: 1.8em;
+	color: #424242;
+	margin-bottom: 1.8em;
 }
 
 /* Links */
@@ -134,10 +166,15 @@ img.work-img {
 
 /* Divs */
 
+.banner {
+	width: 100%;
+    margin-top: 2.3em;
+}
+
 .container {
 	display: block;
 	max-width: 775px;
-	padding-top: 35px;
+	padding-top: 15px;
 	padding-left: 250px;
 	padding-right: 250px;
 	padding-bottom: 5px;
@@ -157,7 +194,7 @@ img.work-img {
 
 .homecontainer {
 	width: 47%;
-	margin-bottom: 4.5em;
+	margin-bottom: 4.2em;
 }
 
 	.homecontainer:hover {
@@ -173,4 +210,24 @@ img.work-img {
 .work {
 	display: flex;
 	justify-content: space-between;
+}
+
+/* Responsive */
+
+@media (min-width: 769px) and (max-width: 1024px) {
+	p.hero-para {
+		width: 75%;
+	}
+	img.work-img {
+		height: 325px;
+	}
+	.hero-icons {
+		width: 40%;
+	}
+	.homecontainer {
+		width: 100%;
+	}
+	.work {
+		display: block;
+	}
 }
