--- a/portfolio_v2/main.css
+++ b/portfolio_v2/main.css
@@ -59,6 +59,13 @@ h5.section-subtitle {
     margin-bottom: 1.25em;
 }
 
+h5.section-subtitle-s {
+	font-weight: 700;
+    font-size: 1.25em;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
+}
+
 p {
 	font-family: "Nunito", sans-serif;
 	font-size: 0.95em;
