--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,13 @@ h1.construct-text {
 	text-align: center;
 }
 
+h2.misc-title {
+    font-size: 2em;
+    color: #424242;
+    margin-top: 2.2em;
+    margin-bottom: 0;
+}
+
 h3.hero-subtitle {
 	font-weight: 700;
 	font-size: 1.2em;
@@ -48,6 +55,13 @@ h3.construction-subtext {
 h3.work-title {
 	font-size: 1.3em;
 	margin-bottom: 0;
+	margin-top: 0.8em;
+}
+
+h4.misc-subtitle {
+	font-family: "Nunito", sans-serif;
+	font-weight: 300;
+	font-size: 0.9em;
 	margin-top: 0.8em;
 }
 
