--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,11 @@ h1.hero-title {
 	font-weight: 900;
     font-size: 2.75em;
     margin-bottom: 0;
+    opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+	animation-delay: 0.1s;
 }
 
 h1.construct-text {
@@ -44,6 +49,12 @@ h3.hero-subtitle {
 	margin-top: 0.1em;
     margin-bottom: 2.5em;
 	color: #5B95EB;
+    opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+	animation-delay: 0.3s;
+
 }
 
 h3.construction-subtext {
@@ -117,6 +128,11 @@ p.caption {
 
 p.hero-para {
 	width: 50%;
+	opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+	animation-delay: 0.4s;
 }
 
 p.footer-text {
@@ -342,6 +358,11 @@ img.work-pic-white {
 	display: flex;
     width: 27%;
     justify-content: space-between;
+    opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+	animation-delay: 0.6s;
 }
 
 .homecontainer {
@@ -372,6 +393,11 @@ img.work-pic-white {
 .work-container {
 	margin-top: 10em;
 	margin-bottom: 4.25em;
+	opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+	animation-delay: 0.65s;
 }
 
 .work {
@@ -387,6 +413,41 @@ img.work-pic-white {
 
 .work-type {
 	width: 29%;
+}
+
+/* Animations */
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 /* Responsive */
