--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,7 @@ h3.construction-subtext {
 h3.work-title {
 	font-size: 1.3em;
 	margin-bottom: 0;
-	margin-top: 0.8em;
+	margin-top: 0;
 }
 
 h4.misc-subtitle {
