--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,6 +195,17 @@ a.email {
 		opacity: 0.6;
 	}
 
+a.filter {
+	font-size: 0.9em;
+    font-weight: 700;
+	color: #5B95EB;
+}
+
+	a.filter:hover {
+		opacity: 0.6;
+		transform: 0.5s ease;	
+	}
+
 a.person {
 	color: #5B95EB;
 }
@@ -326,7 +337,7 @@ img.work-pic-white {
 
 .banner {
 	width: 100%;
-    margin-top: 1.3em;
+    margin-top: 0.6em;
     overflow: hidden;
     height: 750px;
     background-size: auto 100%;
@@ -337,7 +348,7 @@ img.work-pic-white {
 .container {
 	display: block;
 	max-width: 775px;
-	padding-top: 25px;
+	padding-top: 15px;
 	padding-left: 250px;
 	padding-right: 250px;
 	padding-bottom: 5px;
@@ -389,6 +400,29 @@ img.work-pic-white {
 		opacity: 0.7;
 		transition: .7s ease;
 	}
+
+.misc-col {
+	margin-top: 3em;
+	display: flex;
+	justify-content: space-between;
+}
+
+.misc-img {
+	height: 225px;
+	width: 225px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	overflow: hidden;
+	border-radius: 0.3em;
+}
+
+.tags {
+	display: flex;
+    width: 38%;
+    justify-content: space-between;
+    margin-top: 2.25em;
+}
 
 .work-container {
 	margin-top: 10em;
