--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@ h3.hero-subtitle {
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
 	animation-duration: 0.8s;
-	animation-delay: 0.3s;
+	animation-delay: 0.2s;
 
 }
 
@@ -132,7 +132,7 @@ p.hero-para {
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
 	animation-duration: 0.8s;
-	animation-delay: 0.4s;
+	animation-delay: 0.35s;
 }
 
 p.footer-text {
@@ -245,6 +245,15 @@ nav {
 	width: 100%;
 }
 
+nav.home-nav {
+	display: flex;
+	width: 100%;
+	opacity: 0;
+	animation: fadein ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 0.8s;
+}
+
 .navLeft {
 	width: 60%;
 	float: left;
@@ -339,7 +348,7 @@ img.work-pic-white {
 	width: 100%;
     margin-top: 0.6em;
     overflow: hidden;
-    height: 750px;
+    height: 765px;
     background-size: auto 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -373,7 +382,7 @@ img.work-pic-white {
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
 	animation-duration: 0.8s;
-	animation-delay: 0.6s;
+	animation-delay: 0.4s;
 }
 
 .homecontainer {
@@ -431,7 +440,7 @@ img.work-pic-white {
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
 	animation-duration: 0.8s;
-	animation-delay: 0.65s;
+	animation-delay: 0.5s;
 }
 
 .work {
@@ -528,7 +537,7 @@ img.work-pic-white {
     	padding-left: 15px;
 		margin: auto 15px auto 15px;
 	}
-	nav {
+	nav, nav.home-nav {
 		display: grid;
     	justify-content: center;
     	text-align: center;
