--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,7 @@ a.email {
 	}
 
 a.filter {
-	font-size: 0.9em;
+	font-size: 0.95em;
     font-weight: 700;
 	color: #5B95EB;
 }
@@ -365,7 +365,6 @@ img.work-pic-white {
 	margin-top: 2.25em;
 }
 
-
 .banner {
 	width: 100%;
     margin-top: 0.6em;
@@ -375,6 +374,16 @@ img.work-pic-white {
     background-repeat: no-repeat;
     background-position: center;
 }
+
+.col-3 {
+	float: left;
+	width: 30.8%;
+	margin-right: 3.8%;
+}
+
+	.last {
+		margin-right: 0;
+	}
 
 .container {
 	display: block;
@@ -389,6 +398,10 @@ img.work-pic-white {
 .construction {
 	margin-top: 16em;
 	margin-bottom: 21em;
+}
+
+.grid {
+	display: inline-block;
 }
 
 .herocontainer {
@@ -432,21 +445,25 @@ img.work-pic-white {
 		transition: .7s ease;
 	}
 
-.misc-col {
-	margin-top: 3em;
-	display: flex;
-	justify-content: space-between;
-}
-
 .misc-img {
-	height: 225px;
-	width: 225px;
+	height: 240px;
+	width: 240px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	overflow: hidden;
 	border-radius: 0.3em;
+	float: left;
+	margin-bottom: 1.8em;
 }
+
+	.misc-img:hover {
+		opacity: 0.7;
+		transform: scale(1.05);
+		-webkit-transition: 0.6s ease;
+		-moz-transition: 0.6s ease;
+		transition: 0.6s ease;
+	}
 
 .tags {
 	display: flex;
